# lfbg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dos/: CMakeLists.txt  checkers.cpp
examples/: CMakeLists.txt  demo.cpp  mouse.cpp  n_body.cpp  random_pixels.cpp  snake.cpp  test.cpp  text_demo.cpp  text_scroll.cpp  vga.cpp
include/lfbg/: graphics.h
src/: color.cpp  drawables.cpp  graphics.cpp  image.cpp  keyboard.cpp  mouse.cpp  palette.cpp  text.cpp  time.cpp
tc_projects/: 3dhouse.cpp  CMakeLists.txt  checkers.cpp
